--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "date-fns": "^2.20.1",
     "next": "latest",
     "react": "^17.0.1",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
