--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "axios": "^0.21.1",
     "date-fns": "^2.20.1",
+    "js-cookie": "^2.2.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-date-range": "^1.1.3",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^7.1.1",
+    "react-toast-notifications": "^2.4.3"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
