--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.20.1",
+    "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.12",
     "next": "latest",
     "react": "^17.0.1",
     "react-date-range": "^1.1.3",
