--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "next": "latest",
+    "next-absolute-url": "^1.2.2",
     "react": "^17.0.1",
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
